[gd_scene load_steps=43 format=3 uid="uid://l0fxfqthulja"]

[ext_resource type="Script" path="res://script/player.gd" id="1_1ib87"]
[ext_resource type="Texture2D" uid="uid://d0slaockqbr2e" path="res://art/random/knight.png" id="2_cl48x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_s4ehw"]
atlas = ExtResource("2_cl48x")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2p6h4"]
atlas = ExtResource("2_cl48x")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ow0ht"]
atlas = ExtResource("2_cl48x")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ymy5"]
atlas = ExtResource("2_cl48x")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bo6rc"]
atlas = ExtResource("2_cl48x")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nxty"]
atlas = ExtResource("2_cl48x")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlj80"]
atlas = ExtResource("2_cl48x")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qaiid"]
atlas = ExtResource("2_cl48x")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_liisx"]
atlas = ExtResource("2_cl48x")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwe4m"]
atlas = ExtResource("2_cl48x")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifpj7"]
atlas = ExtResource("2_cl48x")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mw30c"]
atlas = ExtResource("2_cl48x")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2npy"]
atlas = ExtResource("2_cl48x")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nuqp"]
atlas = ExtResource("2_cl48x")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_phf63"]
atlas = ExtResource("2_cl48x")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjxt7"]
atlas = ExtResource("2_cl48x")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rguek"]
atlas = ExtResource("2_cl48x")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fslyt"]
atlas = ExtResource("2_cl48x")
region = Rect2(224, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ve3em"]
atlas = ExtResource("2_cl48x")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cw4j5"]
atlas = ExtResource("2_cl48x")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7gmv"]
atlas = ExtResource("2_cl48x")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_imhq7"]
atlas = ExtResource("2_cl48x")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gm0tl"]
atlas = ExtResource("2_cl48x")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_42igo"]
atlas = ExtResource("2_cl48x")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5enyk"]
atlas = ExtResource("2_cl48x")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gohwd"]
atlas = ExtResource("2_cl48x")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6oet2"]
atlas = ExtResource("2_cl48x")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xddef"]
atlas = ExtResource("2_cl48x")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4v4vq"]
atlas = ExtResource("2_cl48x")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fn7gr"]
atlas = ExtResource("2_cl48x")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwcsv"]
atlas = ExtResource("2_cl48x")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gow66"]
atlas = ExtResource("2_cl48x")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnw1f"]
atlas = ExtResource("2_cl48x")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3irk8"]
atlas = ExtResource("2_cl48x")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_iljcd"]
animations = [{
"frames": [{
"duration": 5.0,
"texture": SubResource("AtlasTexture_s4ehw")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2p6h4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ow0ht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ymy5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bo6rc")
}],
"loop": false,
"name": &"die",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nxty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlj80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qaiid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_liisx")
}],
"loop": true,
"name": &"idle",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwe4m")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifpj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mw30c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2npy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nuqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_phf63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjxt7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rguek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fslyt")
}],
"loop": true,
"name": &"roll",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ve3em")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cw4j5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7gmv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imhq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gm0tl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42igo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5enyk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gohwd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6oet2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xddef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4v4vq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fn7gr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwcsv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gow66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnw1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3irk8")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x4jjr"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5nift"]
radius = 5.25
height = 15.5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_isqjq"]
size = Vector2(24.8434, 26.6114)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m6iat"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p36f5"]
bg_color = Color(0.898275, 2.59906e-06, 1.2514e-06, 1)

[node name="player" type="CharacterBody2D" groups=["player"]]
scale = Vector2(4, 4)
disable_mode = 1
collision_layer = 131
collision_mask = 131
script = ExtResource("1_1ib87")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_iljcd")
animation = &"attack"
autoplay = "idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_x4jjr")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3.5)
shape = SubResource("CapsuleShape2D_5nift")

[node name="CoyoteJumpTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.09
one_shot = true

[node name="WallJump" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(-0.25, 5.5)
scale = Vector2(1, 8.25)
target_position = Vector2(-13, 0)

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2(0.25, 5.5)
scale = Vector2(1, 8.25)
target_position = Vector2(13, 0)

[node name="Dash" type="Timer" parent="."]
wait_time = 2.0

[node name="Attack" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 128

[node name="AreaLeft" type="Area2D" parent="Attack"]

[node name="Left" type="CollisionShape2D" parent="Attack/AreaLeft"]
position = Vector2(-16.75, 5)
scale = Vector2(0.966053, 0.338201)
shape = SubResource("RectangleShape2D_isqjq")

[node name="AreaRight" type="Area2D" parent="Attack"]
position = Vector2(-1.90735e-06, 0)

[node name="Right" type="CollisionShape2D" parent="Attack/AreaRight"]
position = Vector2(18.75, 5)
scale = Vector2(0.966053, 0.338201)
shape = SubResource("RectangleShape2D_isqjq")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_speed = 1000.0

[node name="ProgressBar" type="ProgressBar" parent="Camera2D"]
offset_left = -231.75
offset_top = -127.75
offset_right = -105.75
offset_bottom = -93.75
scale = Vector2(1.23042, 0.551764)
theme_override_styles/background = SubResource("StyleBoxFlat_m6iat")
theme_override_styles/fill = SubResource("StyleBoxFlat_p36f5")
max_value = 1000.0

[connection signal="timeout" from="WallJump" to="." method="_on_wall_jump_timeout"]
[connection signal="timeout" from="Dash" to="." method="_on_dash_timeout"]
[connection signal="area_entered" from="Attack" to="." method="_on_attack_area_entered"]
